crates/tui/src/bottom_pane/chat_composer/snapshots/savfox_tui__bottom_pane__chat_composer__tests__footer_mode_hidden_while_typing.snap
---
source: crates/tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"❯ h                                                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                 100% context left  "
