crates/tui/src/bottom_pane/chat_composer/snapshots/savfox_tui__bottom_pane__chat_composer__tests__image_placeholder_multiple.snap
---
source: crates/tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"❯ [Image #1][Image #2]                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                 100% context left  "
